Enable multiplication tables choice

--- a/UI/assets/translation/main/en.json
+++ b/UI/assets/translation/main/en.json
@@ -10,5 +10,6 @@
     "OPERATOR_ADD_LABEL": "Additions",
     "OPERATOR_SUB_LABEL": "Subtractions",
     "OPERATOR_MULT_LABEL": "Multiplications",
-    "QUESTIONS_PER_ROUND": "Questions per round:"
+    "QUESTIONS_PER_ROUND": "Questions per round",
+    "MULT_OPERANDS": "Multiplications tables"
  }
