--- a/UI/assets/translation/main/fr.json
+++ b/UI/assets/translation/main/fr.json
@@ -10,5 +10,6 @@
     "OPERATOR_ADD_LABEL": "Additions",
     "OPERATOR_SUB_LABEL": "Soustractions",
     "OPERATOR_MULT_LABEL": "Multiplications",
-    "QUESTIONS_PER_ROUND": "Questions par tour:"
+    "QUESTIONS_PER_ROUND": "Questions par tour:",
+    "MULT_OPERANDS": "Tables de multiplications"
 }
