--- a/UI/assets/translation/main/en.json
+++ b/UI/assets/translation/main/en.json
@@ -11,5 +11,5 @@
     "OPERATOR_SUB_LABEL": "Subtractions",
     "OPERATOR_MULT_LABEL": "Multiplications",
     "QUESTIONS_PER_ROUND": "Questions per round",
-    "MULT_OPERANDS": "Multiplications tables"
+    "MULT_OPERANDS": "Multiplication tables"
  }
